--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,11 @@ jobs:
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@0d4c9c5ea7693da7b068278f7b52bda2a190a446
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: Log into registry
       #   run: echo "${{ secrets.REGISTRY_USERNAME }}" | docker login docker.cocapasteque.tech -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
 
